<package>
  <name>open_manipulator_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     open_manipulator_flexbe_states provides a collection of custom states for the open manipulator.
     Feel free to add new states.
  </description>
  <maintainer email="gerardanneharkema@gmail.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
